--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
         form {
             background-color: #fff;
             max-width: 900px;
-            margin: 0 auto;
+            margin: 0 car;
             padding: 20px 40px;
             box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
             border-radius: 5px;
